Blender 2.8 crashes with bezier curve snap #56679

Closed
opened 2018-09-04 10:20:13 +02:00 by Erick Tukuniata · 5 comments

System Information
Operating system and graphics card : Win 7 gtx 550ti

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen) Blender 2.8 alpha 2 today build, oddly i m not having an hash number
Worked: (optional)

Short description of error

Blender 2.8 crashes with bezier curve snap

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  • Add a bezier curve
  • Go to edit mode and shift+s
  • Pick one from pop up menu
  • Blender crashes
**System Information** Operating system and graphics card : Win 7 gtx 550ti **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Blender 2.8 alpha 2 today build, oddly i m not having an hash number Worked: (optional) **Short description of error** Blender 2.8 crashes with bezier curve snap **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps - Add a bezier curve - Go to edit mode and shift+s - Pick one from pop up menu - Blender crashes

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

Added subscribers: @dfelinto, @mont29

Added subscribers: @dfelinto, @mont29
Bastien Montagne self-assigned this 2018-09-04 14:26:26 +02:00

This has been reported at least half a dozen of times already, but cannot find open report anymore, so would assume original issue has been fixed.

FOund another crash though, from recent @dfelinto changes, will assume that’s the current bug and fix.

This has been reported at least half a dozen of times already, but cannot find open report anymore, so would assume original issue has been fixed. FOund another crash though, from recent @dfelinto changes, will assume that’s the current bug and fix.

This issue was referenced by f1de256ea0

This issue was referenced by f1de256ea018e0850fbe337d04f35422b8fbaf2d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56679
No description provided.