Fix T56679: Blender 2.8 crashes with bezier curve snap.

Follow up to rB621b16468ef72fb actually... Seriously... :/